--- a/index.html
+++ b/index.html
@@ -1,18 +1,79 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>My resume</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
 </head>
-
 <body>
-
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
-
+  <div class="wrapper">
+    <header class="header">
+      <h1> резюме rs school <br> Алексей Костевич</h1>
+    </header>
+    <main>
+      <section>
+        <picture class="avatar_container">
+          <img class="avatar" src="img\avatar.jpg" alt="Avatar">
+        </picture>
+        <h2>1.Контактная информация:</h2>
+        <ul>
+            <li>телефон: +37529 103 20 23</li>
+            <li>e-mail: Green242526@gmail.com</li>
+        </ul>
+      </section>
+      <section>
+        <h2>2. О себе: </h2>
+          <p>Окончил в 2007 году БНТУ по специальности 'инженер-энергетик'. С недавнего времени обучаюсь программированию на JS. Так же ранее изучал основы программирования на Arduino. Обучаюсь каждый день и не планирую останавливаться</p>
+      </section>
+      <section>
+          <h2>3. Образование:</h2>
+               <ul>
+                  <li><b> Белорусский национальный технический университет</b> - 2001-2007г. - образование высшее, специальность -'инженер-энергетик'</li>
+                  <li><b> RS School</b> - 09.09.2019-настояшее время</li>
+              </ul>
+      </section>
+      <section>
+          <h2>4. Навыки в программировании:</h2>
+          <ul>
+              <li><b> HTML5</b>  - базовый уровень</li>
+              <li><b> CSS3</b> - базовый уровень</li>
+              <li><b> JavaScript</b> - базовый уровень</li>
+              <li><b> Photoshop, Corel Draw</b> - базовый уровень</li>
+              <li><b> Arduino</b> - базовый уровень</li>
+          </ul>
+      </section>
+      <section>
+          <h2>5. Примеры кода:</h2>
+          <ul>
+              <li><a href="http://www.pixelcom.crimea.ua/javascript-primery-i-kody.html)">JS</a></li>
+              <li><a href="http://freeduino.ru/arduino/sample_PhysicalPixel.html">Arduino</a></li>
+          </ul>
+      </section>
+      <section>
+          <h2>6. Опыт работы:</h2>
+          <ul>
+              <li>2005-2007гг. - УП 'Белэнергосетьпроект' - инженер-проектировщик</li>
+              <li>2007-20015гг. - ОАО 'МПЗ' - инженер-энергетик</li>
+              <li>2015-2019гг. - УП 'Косметика Плюс-Трейдинг' - инженер-энергетик</li>
+          </ul>
+      </section>
+      <section>
+          <h2>7. Английский язык</h2>
+          <p>A1</p>
+      </section>
+      <section>
+          <h2>8. Хобби:</h2>
+          <ul>
+              <li>программирование</li>
+              <li>автомобили</li>
+              <li>мотоциклы</li>
+              <li>путешествия</li>
+          </ul>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
